<resources>
    <string name="app_name">Helpmate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading...</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">address</string>
    <string name="fordate">For Date</string>
    <string name="sunrise">Sun Rise</string>
    <string name="sunset">Sun Set</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="currentStatusText">Current Status</string>

    <string name="allGood">Your Star and Current Hora will support!</string>
    <string name="starGood">Your Star is Good but Hora will not support!</string>
    <string name="horaGood">Your Star is not Good but Hora will support!</string>
    <string name="noneGood">Neither Your Star nor Current Hora will support!</string>

    <string name="goodStatusText">Go ahead and do it!</string>
    <string name="badStatusText">Please hold on for now!</string>
    <string name="currentStar">Current Star</string>
    <string name="currentStarLabel">Current Star:</string>
    <string name="currentHoraLabel">Current Hora:</string>
    <string name="currentHora">Current Hora</string>
    <string name="your_star_label">Your Star</string>
    <string name="your_star_key">YOUR_STAR</string>
    <string name="your_star_default">ASWINI</string>
    <string name="title_activity_settings">Star Settings</string>
    <string name="yourStarLabel">Your Star: </string>
    <string name="yourStar">Your Star</string>
    <string name="reasonLabel">Reason:</string>
    <string name="reasonText">Reason</string>

    <string name="dayChart">Chart for 6 AM to 6 PM</string>

    <string name="nightChart">Chart for 6 PM to 6 AM(Tomorrow)</string>

    <string-array name="planets_array">
        <item>SUN</item>
        <item>VENUS</item>
        <item>MERCURY</item>
        <item>MOON</item>
        <item>SATURN</item>
        <item>JUPITER</item>
        <item>MARS</item>
    </string-array>

    <string-array name="stars_array">
        <item>ASWINI</item>
        <item>BHARANI</item>
        <item>KRITIKA</item>
        <item>ROHINI</item>
        <item>MRIGASIRA</item>
        <item>ARUDRA</item>
        <item>PUNARVASU</item>
        <item>PUSHYAMI</item>
        <item>ASLESHA</item>
        <item>MAKHA</item>
        <item>PUBBA</item>
        <item>UTTARA</item>
        <item>HASTHA</item>
        <item>CHITTA</item>
        <item>SWATHI</item>
        <item>VISAKHA</item>
        <item>ANURADHA</item>
        <item>JYESTA</item>
        <item>MOOLA</item>
        <item>PURVASHADA</item>
        <item>UTTARASHADA</item>
        <item>SRAVANAM</item>
        <item>DHANISTA</item>
        <item>SATABHISHAM</item>
        <item>PURVABHADRA</item>
        <item>UTTARABHADRA</item>
        <item>REVATHI</item>
    </string-array>

</resources>
