<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/currentStatus"
        />

    <TextView android:text="@string/currentStatusText" android:layout_width="wrap_content"
        android:id="@+id/currentStatusText"  android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:textSize="32dp"
        />

</LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
    <TextView android:text="@string/currentStarLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/currentStar" android:layout_width="wrap_content"
        android:id="@+id/currentStar"  android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
     <TextView android:text="@string/yourStarLabel" android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />


            <TextView android:text="@string/yourStar" android:layout_width="wrap_content"
                android:id="@+id/yourStarTextView"  android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
    <TextView android:text="@string/currentHoraLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/currentHora" android:layout_width="wrap_content"
        android:id="@+id/currentHora"  android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/reasonLabel" android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView android:text="@string/reasonText" android:layout_width="wrap_content"
                android:id="@+id/reasonText"  android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

<!--
    <TextView android:text="@string/fordate" android:layout_width="wrap_content"
      android:id="@+id/fordate"  android:layout_height="wrap_content" />

    <TextView android:text="@string/longitude" android:layout_width="wrap_content"
        android:id="@+id/longitude"  android:layout_height="wrap_content" />

    <TextView android:text="@string/latitude" android:layout_width="wrap_content"
        android:id="@+id/latitude"  android:layout_height="wrap_content" />

    <TextView android:text="@string/sunrise" android:layout_width="wrap_content"
        android:id="@+id/sunrise"  android:layout_height="wrap_content" />

    <TextView android:text="@string/sunset" android:layout_width="wrap_content"
        android:id="@+id/sunset"  android:layout_height="wrap_content" />

    <TextView android:text="@string/address" android:layout_width="wrap_content"
        android:id="@+id/address"  android:layout_height="wrap_content" />


-->
    <ListView android:id="@+id/listview_horas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
